--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -45,11 +45,11 @@ h1{
 }
 
 h2{
-  font-size: 24px;
+  font-size: 22px;
 }
 
 h3{
-  font-size: 20px;
+  font-size: 18px;
 }
 
 a{
@@ -150,7 +150,7 @@ section{
     width: 100vw;
 }
 section div{
-    padding: 20px;
+    padding: 1px 20px 20px;
 }
 @media (min-width: 768px){
   section.narrow div{
@@ -160,9 +160,7 @@ section div{
 }
 
 select {
-  background: #fff;
-  height: 22px;
-  font-size: 14px;
+  max-width: 100%;
 }
 
 @media (max-width: 767px){
@@ -174,4 +172,8 @@ select {
   .pc-none{
     display: none;
   }
+}
+
+.center{
+    text-align: center;
 }
