ホロスコープ

--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -16,7 +16,7 @@ body{
 }
 
 #bg{
-    background-image: url(/img/home/astronoom.jpg);
+    background-image: url(/img/painting/astronoom.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
