最低限完成

--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -7,7 +7,7 @@ html {
 
 body{
   color: #71735b;
-  font-family: 'Krub', "游ゴシック", "Yu Gothic", YuGothic, sans-serif;
+  font-family: "游ゴシック", "Yu Gothic", YuGothic, sans-serif;
   font-size: 15px;
   letter-spacing: 0.05em;
   line-height: 1.8em;
